--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.5.0",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "middleware": "^1.0.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
